# sysinf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backups/: path-backup-20260305-001036.txt  path-backup-before-vhs-cleanup-20260305-014439.txt
src/: cli.cpp  cli.h  collectors.cpp  collectors.h  main.cpp  output.cpp  output.h  runtime_status.cpp  runtime_status.h  types.h  util.cpp  util.h
src/collectors/: common.cpp  common.h  core_collectors.cpp  perf_collectors.cpp  routing.cpp
tests/: cli_tests.cpp
